Check if setup is run on every launch & random changes

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 .node-persist/storage/7c565c6655e82e523fc2ea3966e4a708
 
 .node-persist/storage/be1969d80abd59c82a9558db43e09a33
+
+.node-persist/storage/17e1270bd707558cdd78fd97bfd90064
